spacing fixes, sorting applied

--- a/src/assets/css/responsive.scss
+++ b/src/assets/css/responsive.scss
@@ -120,7 +120,9 @@ $value_eight: 480px;
     }
   }
 
-  .home-banner {
+  .home-banner,
+  .home-banner-project,
+  .home-banner-profile {
     padding: {
       top: 160px;
       bottom: 70px;
